--- a/css/cStyles.css
+++ b/css/cStyles.css
@@ -1,3 +1,26 @@
+     /* fallback */
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url(http://fonts.gstatic.com/s/materialicons/v18/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
      html, body {
         height: 100%;
         margin: 0;
@@ -6,8 +29,7 @@
       #map {
         height: 100%;
       }
-      nav a.button-collapse{
-      	display: block !important;
-      	padding-left: 10%;
-
+      .button-collapse{
+      	display: block;
+      	padding: 10%;
       }
