--- a/css/cStyles.css
+++ b/css/cStyles.css
@@ -3,7 +3,7 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(fonts/roboto/MaterialIcons-Regular.woff2.woff2) format('woff2'),
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url(fonts/roboto/MaterialIcons-Regular.woff2.woff2).format('woff2'),
   url(fonts/roboto/MaterialIcons-Regular.woff).format('woff'),url(fonts/roboto/MaterialIcons-Regular.ttf).format('truetype');
 }
 
