--- a/css/cStyles.css
+++ b/css/cStyles.css
@@ -1,3 +1,4 @@
+
      html, body {
         height: 100%;
         margin: 0;
@@ -6,7 +7,8 @@
       #map {
         height: 100%;
       }
-      .button-collapse{
+
+     nav a.button-collapse {
       	display: block;
       	padding: 10%;
       }
