--- a/css/cStyles.css
+++ b/css/cStyles.css
@@ -7,8 +7,7 @@
       #map {
         height: 100%;
       }
-
+      
      nav a.button-collapse {
-      	display: block;
-      	padding: 10%;
+      	display: block !important;
       }
