--- a/css/cStyles.css
+++ b/css/cStyles.css
@@ -11,6 +11,7 @@
      nav a.button-collapse {
       	display: block !important;
       }
-      .ic{
-      	float:right;
+      img{
+      	width: 250px;
+      	height:100px;
       }
