--- a/css/cStyles.css
+++ b/css/cStyles.css
@@ -15,3 +15,14 @@
       	width: 250px;
       	height:100px;
       }
+      .price{
+      	font-family: cursive;
+      	font-size: 2em;
+      }
+
+      @media screen and (max-width: 480px) {
+      	img{
+      	width: 150px;
+      	height:70px;
+      	}
+      }
